--- a/src/MerchandiseService.Api/MerchandiseService.Api.csproj
+++ b/src/MerchandiseService.Api/MerchandiseService.Api.csproj
@@ -5,10 +5,12 @@
         <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
         <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
         <UserSecretsId>93f1ae5d-be4d-4972-8cb6-ca7356d558ec</UserSecretsId>
+        <Version>0.0.2</Version>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.11.1" />
+      <ProjectReference Include="..\MerchandiseService.Grpc\MerchandiseService.Grpc.csproj" />
+      <ProjectReference Include="..\MerchandiseService.Infrastructure\MerchandiseService.Infrastructure.csproj" />
     </ItemGroup>
 
 </Project>
