--- a/src/MerchandiseService.Api/MerchandiseService.Api.csproj
+++ b/src/MerchandiseService.Api/MerchandiseService.Api.csproj
@@ -9,8 +9,13 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\MerchandiseService.Domain\MerchandiseService.Domain.csproj" />
       <ProjectReference Include="..\MerchandiseService.Grpc\MerchandiseService.Grpc.csproj" />
       <ProjectReference Include="..\MerchandiseService.Infrastructure\MerchandiseService.Infrastructure.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
     </ItemGroup>
 
 </Project>
