--- a/src/MerchandiseService.Api/MerchandiseService.Api.csproj
+++ b/src/MerchandiseService.Api/MerchandiseService.Api.csproj
@@ -9,6 +9,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\MerchandiseService.Application\MerchandiseService.Application.csproj" />
       <ProjectReference Include="..\MerchandiseService.Domain\MerchandiseService.Domain.csproj" />
       <ProjectReference Include="..\MerchandiseService.Grpc\MerchandiseService.Grpc.csproj" />
       <ProjectReference Include="..\MerchandiseService.Infrastructure\MerchandiseService.Infrastructure.csproj" />
